<resources>
    <string name="app_name">NoteIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="layout">Layout</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="archive">Archive</string>
    <string name="note_archived">Note archived</string>
    <string name="notes">Notes</string>
    <string name="add_alert">Add alert</string>
    <string name="unarchive">Unarchive</string>
    <string name="palette">Palette</string>
    <string name="select_file">Select file</string>
    <string name="action_backup_drive">Backup to drive</string>
    <string name="action_import_drive">Import from drive</string>
    <string name="backup_successfully">Backup successufly loaded!</string>
    <string name="import_completed">Import completed</string>
    <string name="error_importing">Error importing</string>
    <string name="notify_date">Notify date</string>
    <string name="attach">Attach</string>
    <string name="add">Add</string>
    <string name="create_note">Create Note</string>
    <string name="create_task">Create Task</string>
    <string name="edit">Edit</string>
    <string name="list_item">List item</string>
</resources>
