<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_palette"
        android:icon="@drawable/ic_palette"
        android:title="@string/palette"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_unarchive"
        android:title="@string/unarchive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>
