<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@null"
            android:hint="@string/title"
            android:maxLength="40"
            android:singleLine="true"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/task_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/list_item"
                android:maxLength="40"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--<FrameLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="start|center_vertical"-->
        <!--android:paddingStart="12dp">-->

        <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?android:selectableItemBackground"-->
        <!--android:contentDescription="TODO"-->
        <!--android:onClick="attachImage"-->
        <!--android:src="@drawable/ic_add_box" />-->
        <!--</FrameLayout>-->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/note_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingEnd="12dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="TODO"
                android:onClick="changeColor"
                android:src="@drawable/ic_palette" />
        </FrameLayout>
    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>